<resources>
    <string name="app_name">New App</string>

    <string name="hello_world">Welcome!</string>
    <string name="userFirstName">First Name</string>
    <string name="userLastName">Last Name</string>
    <string name="userEmailId">Mail Id</string>
    <string name="userMobileNumber">Ph. Number</string>
    <string name="userGender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="subscribe">Agree</string>
    <string name="buttonText">Submit</string>
    <string name="action_settings">Settings</string>

    <string-array name="countryArray">
        <item>Select a country</item>
        <item>India</item>
        <item>U.S.A</item>
        <item>Australia</item>
        <item>South Africa</item>
        <item>New Zealand</item>
    </string-array>

</resources>
